# Lab_EXP

./: .gitignore  README.md
Base/: CMakeLists.txt  lenet5_model.pt  main.cpp  teste_mnistpi.cpp
Client/: CMakeLists.txt  main.cpp
Rasp/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
TemplateMatching/: CMakeLists.txt  main.cpp
lib/: Client.cpp  Client.hpp  Device.cpp  Device.hpp  Raspberry.hpp  Server.cpp  Server.hpp
